--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,19 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- MySQL Connector Dependency -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.29</version> <!-- Use the latest version available -->
+		</dependency>
+
+		<!-- Spring Data MongoDB Starter -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+
 		<!-- security, authentication & authorization -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -88,7 +101,6 @@
 			<version>1.5.5.Final</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.googlecode.owasp-java-html-sanitizer/owasp-java-html-sanitizer -->
 		<!-- HTML sanitizer -->
 		<dependency>
 			<groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
