--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -24,6 +24,21 @@ spring.datasource.password=mysqlpass
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.driverClassName=org.h2.Driver
 
+# MySQL Database Configuration
+spring.datasource.mysql.url=jdbc:mysql://localhost:3306/yourdbname
+spring.datasource.mysql.username=mysqluser
+spring.datasource.mysql.password=mysqlpass
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# MongoDB Database Configuration
+spring.data.mongodb.uri=mongodb://localhost:27017/yourdbname
+
+# Switch to active profile (uncomment the desired database profile)
+#spring.profiles.active=h2
+#spring.profiles.active=mysql
+#spring.profiles.active=mongodb
+
 ## database schema generation
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
