--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,21 +1,52 @@
-# H2 Database Configuration
+##
+## Profiles
+##
+# Uncomment to set the active profile for the desired database
+# spring.profiles.active=h2
+# spring.profiles.active=mysql
+# spring.profiles.active=mongodb
+
+## OpenAPI
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui
+
+## JWT
+jwt.private.key=classpath:rsa.private.key
+jwt.public.key=classpath:rsa.public.key
+
+## H2 Database Configuration (In-Memory)
 spring.datasource.h2.url=jdbc:h2:mem:testdb
 spring.datasource.h2.username=testuser
 spring.datasource.h2.password=testpass
 spring.datasource.h2.driverClassName=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# MySQL Database Configuration
-spring.datasource.mysql.url=jdbc:mysql://localhost:3306/yourdbname
-spring.datasource.mysql.username=mysqluser
-spring.datasource.mysql.password=mysqlpass
+## MySQL Database Configuration
+##spring.datasource.url=jdbc:mysql://localhost:3306/yourdbname
+spring.datasource.username=mysqluser
+spring.datasource.password=mysqlpass
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-# MongoDB Database Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/yourdbname
+## MongoDB Database Configuration
+# Uncomment to use MongoDB
+# spring.data.mongodb.uri=mongodb://localhost:27017/yourdbname
 
-# Switch to active profile (uncomment the desired database profile)
-#spring.profiles.active=h2
-#spring.profiles.active=mysql
-#spring.profiles.active=mongodb
+## MULTIPART (MultipartProperties)
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
+
+## File Storage Properties
+file.upload-dir=uploads-psoft-g1
+file.photo_max_size=20000
+
+## Api Ninjas key
+my.ninjas-key=a5nSlaa4JxIubY09H+NYuQ==cY9FegnFmAvYi6fN
+
+## Logging
+logging.level.com.example.demo=DEBUG
+#logging.level.org.springframework=DEBUG
